--- a/api/composer.json
+++ b/api/composer.json
@@ -12,44 +12,43 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "guzzlehttp/guzzle": "^7.4",
-        "lcobucci/jwt": "^4.2",
-        "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "ramsey/uuid-doctrine": "^1.6",
-        "symfony/asset": "6.1.*",
-        "symfony/console": "6.1.*",
-        "symfony/doctrine-messenger": "6.1.*",
-        "symfony/dotenv": "6.1.*",
-        "symfony/expression-language": "6.1.*",
+        "symfony/asset": "6.2.x-dev",
+        "symfony/console": "6.2.x-dev",
+        "symfony/doctrine-messenger": "6.2.x-dev",
+        "symfony/dotenv": "6.2.x-dev",
+        "symfony/expression-language": "6.2.x-dev",
         "symfony/flex": "^2.2",
-        "symfony/framework-bundle": "6.1.*",
-        "symfony/http-client": "6.1.*",
+        "symfony/framework-bundle": "6.2.x-dev",
+        "symfony/http-client": "6.2.x-dev",
         "symfony/mercure-bundle": "^0.3.5",
-        "symfony/messenger": "6.1.*",
+        "symfony/messenger": "6.2.x-dev",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/property-access": "6.1.*",
-        "symfony/property-info": "6.1.*",
-        "symfony/runtime": "6.1.*",
-        "symfony/security-bundle": "6.1.*",
-        "symfony/serializer": "6.1.*",
-        "symfony/twig-bundle": "6.1.*",
-        "symfony/validator": "6.1.*",
-        "symfony/yaml": "6.1.*",
+        "symfony/property-access": "6.2.x-dev",
+        "symfony/property-info": "6.2.x-dev",
+        "symfony/runtime": "6.2.x-dev",
+        "symfony/security-bundle": "6.2.x-dev",
+        "symfony/serializer": "6.2.x-dev",
+        "symfony/twig-bundle": "6.2.x-dev",
+        "symfony/validator": "6.2.x-dev",
+        "symfony/yaml": "6.2.x-dev",
         "webonyx/graphql-php": "^14.9"
     },
     "require-dev": {
         "api-platform/schema-generator": "^5.0",
         "hautelook/alice-bundle": "^2.9",
         "justinrainbow/json-schema": "^5.2",
-        "symfony/browser-kit": "6.1.*",
-        "symfony/css-selector": "6.1.*",
-        "symfony/debug-bundle": "6.1.*",
+        "rector/rector": "0.14.x-dev",
+        "symfony/browser-kit": "6.2.x-dev",
+        "symfony/css-selector": "6.2.x-dev",
+        "symfony/debug-bundle": "6.2.x-dev",
         "symfony/maker-bundle": "^1.44",
-        "symfony/phpunit-bridge": "6.1.*",
-        "symfony/stopwatch": "6.1.*",
-        "symfony/var-dumper": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*",
+        "symfony/phpunit-bridge": "6.2.x-dev",
+        "symfony/stopwatch": "6.2.x-dev",
+        "symfony/var-dumper": "6.2.x-dev",
+        "symfony/web-profiler-bundle": "6.2.x-dev",
         "vimeo/psalm": "^4.7"
     },
     "config": {
@@ -99,10 +98,11 @@
     "conflict": {
         "symfony/symfony": "*"
     },
+    "minimum-stability": "dev",
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*",
+            "require": "6.2.x-dev",
             "docker": false
         }
     }
