--- a/api/fixtures/users.yml
+++ b/api/fixtures/users.yml
@@ -1,5 +1,7 @@
 App\Entity\User:
     admin:
         email: admin@example.com
-        password: '\$argon2i\$v=19\$m=1024,t=2,p=2\$VDVhNGQ3aXJWOERlUjFXNA\$XbciSUQoCYR4Z9lFxyLIXumra84HJzyBzLYMB+H6cMU' # admin
-        roles: [ROLE_ADMIN]
+        roles: [ ROLE_ADMIN ]
+    user:
+        email: user@example.com
+        roles: [ ROLE_USER ]
