--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ on:
       cloudflare-zone-id:
         description: Cloudflare Zone Id
         required: true
+      keycloak-admin-password:
+        description: Keycloak Admin Password
+        required: true
 
 jobs:
   deploy:
@@ -79,25 +82,18 @@ jobs:
       - name: Build helm dependencies
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami/
-          helm repo add bitnami-pre-2022 https://raw.githubusercontent.com/bitnami/charts/eb5f9a9513d987b519f0ecd732e7031241c50328/bitnami
           helm repo add stable https://charts.helm.sh/stable/
           helm dependency build ./helm/api-platform
-      - name: Check for existing namespace
-        id: k8s-namespace
-        run: echo "::set-output name=namespace::$(kubectl get namespace ${{ inputs.namespace }} 2> /dev/null)"
       # Release name MUST start with a letter
-      # GitHub doesn't support multilines environment variables (JWT_*_KEY)
-      - name: Deploy in new namespace
-        if: steps.k8s-namespace.outputs.namespace == ''
+      - name: Deploy
         run: |
-          JWT_PASSPHRASE=$(openssl rand -base64 32)
-          JWT_SECRET_KEY=$(openssl genpkey -pass file:<(echo "$JWT_PASSPHRASE") -aes256 -algorithm rsa -pkeyopt rsa_keygen_bits:4096)
           helm upgrade ${{ inputs.release }} ./helm/api-platform \
-            --reuse-values \
             --install \
             --create-namespace \
             --namespace=${{ inputs.namespace }} \
             --set=app.version=${{ github.sha }} \
+            --set=keycloak.ingress.hostname=keycloak-${{ inputs.url }} \
+            --set=keycloak.auth.adminPassword=${{ secrets.keycloak-admin-password }} \
             --set=php.image.repository=eu.gcr.io/${{ secrets.gke-project }}/php \
             --set=php.image.tag=${{ inputs.docker-images-version }} \
             --set=php.image.pullPolicy=Always \
@@ -111,35 +107,10 @@ jobs:
             --set=ingress.hosts[0].paths[0].path=/* \
             --set=ingress.hosts[0].paths[0].pathType=ImplementationSpecific \
             --set=external-dns.cloudflare.apiToken=${{ secrets.cloudflare-api-token }} \
-            --set=external-dns.domainFilters={"${{ inputs.url }}"} \
+            --set=external-dns.domainFilters={"${{ inputs.url }},keycloak-${{ inputs.url }}"} \
             --set=external-dns.zoneIdFilters={${{ secrets.cloudflare-zone-id }}} \
-            --set=php.jwt.secretKey="$JWT_SECRET_KEY" \
-            --set=php.jwt.publicKey="$(openssl pkey -in <(echo "$JWT_SECRET_KEY") -passin file:<(echo "$JWT_PASSPHRASE") -pubout)" \
-            --set=php.jwt.passphrase=$JWT_PASSPHRASE \
             --set=php.corsAllowOrigin="^$(echo "${{ join(fromJSON(inputs.cors), '|') }}" | sed 's/\./\\./g')$" \
             --set=php.host=${{ inputs.url }} \
             --set=mercure.publicUrl=https://${{ inputs.url }}/.well-known/mercure \
-            --set=postgresql.postgresqlPassword=$(openssl rand -base64 32 | tr -d "=+/") \
-            --set=mercure.extraDirectives="demo \
-            cors_origins ${{ join(fromJSON(inputs.cors), ' ') }}"
-      - name: Upgrade namespace
-        if: steps.k8s-namespace.outputs.namespace != ''
-        run: |
-          helm upgrade ${{ inputs.release }} ./helm/api-platform \
-            --reuse-values \
-            --install \
-            --create-namespace \
-            --namespace=${{ inputs.namespace }} \
-            --set=app.version=${{ github.sha }} \
-            --set=php.image.repository=eu.gcr.io/${{ secrets.gke-project }}/php \
-            --set=php.image.tag=${{ inputs.docker-images-version }} \
-            --set=php.image.pullPolicy=Always \
-            --set=caddy.image.repository=eu.gcr.io/${{ secrets.gke-project }}/caddy \
-            --set=caddy.image.tag=${{ inputs.docker-images-version }} \
-            --set=caddy.image.pullPolicy=Always \
-            --set=pwa.image.repository=eu.gcr.io/${{ secrets.gke-project }}/pwa \
-            --set=pwa.image.tag=${{ inputs.docker-images-version }} \
-            --set=pwa.image.pullPolicy=Always \
-            --set=php.corsAllowOrigin="^$(echo "${{ join(fromJSON(inputs.cors), '|') }}" | sed 's/\./\\./g')$" \
             --set=mercure.extraDirectives="demo \
             cors_origins ${{ join(fromJSON(inputs.cors), ' ') }}"
