--- a/api/.env
+++ b/api/.env
@@ -16,10 +16,13 @@
 
 API_ENTRYPOINT_SCHEME=https
 API_ENTRYPOINT_HOST=localhost
+OIDC_ALGORITHM=RS256
 
 # API Platform distribution
 TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 TRUSTED_HOSTS=^(localhost|caddy)$
+OIDC_SERVER_URL=http://localhost:8080/realms/demo/
+OIDC_SWAGGER_CLIENT_ID=api-platform-swagger
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -48,12 +51,6 @@ MERCURE_PUBLIC_URL=http://caddy/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
 ###< symfony/mercure-bundle ###
-
-###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=85d8de1a30ac46474f2f91c4ff97a477
-###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/messenger ###
 # Choose one of the transports below
