--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       - pwa
     environment:
       PWA_UPSTREAM: pwa:3000
+      KEYCLOAK_UPSTREAM: keycloak:8443
       SERVER_NAME: ${SERVER_NAME:-localhost}, caddy:80
       MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
       MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
@@ -105,6 +106,46 @@ services:
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
 
+  keycloak-database:
+    image: postgres:${KEYCLOAK_POSTGRES_VERSION:-14}-alpine
+    environment:
+      - POSTGRES_DB=${KEYCLOAK_POSTGRES_DB:-keycloak}
+      # You should definitely change the password in production
+      - POSTGRES_PASSWORD=${KEYCLOAK_POSTGRES_PASSWORD:-!ChangeMe!}
+      - POSTGRES_USER=${KEYCLOAK_POSTGRES_USER:-keycloak}
+    volumes:
+      - keycloak_db_data:/var/lib/postgresql/data
+
+  keycloak:
+    image: bitnami/keycloak:18-debian-11
+    environment:
+      KEYCLOAK_DATABASE_HOST: keycloak-database
+      KEYCLOAK_DATABASE_NAME: ${KEYCLOAK_POSTGRES_DB:-keycloak}
+      KEYCLOAK_DATABASE_USER: ${KEYCLOAK_POSTGRES_USER:-keycloak}
+      KEYCLOAK_DATABASE_PASSWORD: ${KEYCLOAK_POSTGRES_PASSWORD:-!ChangeMe!}
+      KEYCLOAK_ADMIN_USER: ${KEYCLOAK_USER:-admin}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD:-!ChangeMe!}
+    depends_on:
+      - keycloak-database
+    ports:
+      - target: 8080
+        published: 8080
+        protocol: tcp
+
+  keycloak-config-cli:
+    image: bitnami/keycloak-config-cli
+    environment:
+      KEYCLOAK_URL: http://keycloak:8080/
+      KEYCLOAK_USER: ${KEYCLOAK_USER:-admin}
+      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD:-!ChangeMe!}
+      KEYCLOAK_AVAILABILITYCHECK_ENABLED: true
+      KEYCLOAK_AVAILABILITYCHECK_TIMEOUT: 120s
+      IMPORT_FILES_LOCATIONS: '/config/*'
+    depends_on:
+      - keycloak
+    volumes:
+      - ./helm/api-platform/keycloak-config:/config
+
 volumes:
   php_socket:
   caddy_data:
@@ -114,3 +155,4 @@ volumes:
 ###< doctrine/doctrine-bundle ###
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
+  keycloak_db_data:
