--- a/helm/api-platform/Chart.yaml
+++ b/helm/api-platform/Chart.yaml
@@ -27,10 +27,14 @@ appVersion: 0.1.0
 dependencies:
   # bitnami chart are using the workaround from https://github.com/bitnami/charts/issues/10539
   - name: postgresql
-    version: ~10.16.2
-    repository: https://charts.bitnami.com/bitnami/
+    version: ~11.8.0
+    repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
   - name: external-dns
-    version: ~5.4.15
-    repository: https://raw.githubusercontent.com/bitnami/charts/eb5f9a9513d987b519f0ecd732e7031241c50328/bitnami
+    version: ~6.7.1
+    repository: https://charts.bitnami.com/bitnami
     condition: external-dns.enabled
+  - name: keycloak
+    version: ~9.6.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: keycloak.enabled
