--- a/helm/api-platform/templates/deployment.yaml
+++ b/helm/api-platform/templates/deployment.yaml
@@ -90,21 +90,8 @@ spec:
                 configMapKeyRef:
                   name: {{ include "api-platform.fullname" . }}
                   key: php-host
-            - name: JWT_PASSPHRASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-passphrase
-            - name: JWT_PUBLIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-public-key
-            - name: JWT_SECRET_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-secret-key
+            - name: OIDC_SERVER_URL
+              value: https://{{ .Values.keycloak.ingress.hostname }}/realms/demo/
             - name: TRUSTED_HOSTS
               valueFrom:
                 configMapKeyRef:
@@ -192,21 +179,8 @@ spec:
                 configMapKeyRef:
                   name: {{ include "api-platform.fullname" . }}
                   key: php-host
-            - name: JWT_PASSPHRASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-passphrase
-            - name: JWT_PUBLIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-public-key
-            - name: JWT_SECRET_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
-                  key: php-jwt-secret-key
+            - name: OIDC_SERVER_URL
+              value: https://{{ .Values.keycloak.ingress.hostname }}/realms/demo/
             - name: TRUSTED_HOSTS
               valueFrom:
                 configMapKeyRef:
