--- a/helm/api-platform/templates/secrets.yaml
+++ b/helm/api-platform/templates/secrets.yaml
@@ -7,12 +7,9 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.postgresql.enabled }}
-  database-url: {{ printf "pgsql://%s:%s@%s-postgresql/%s?serverVersion=13&charset=utf8" .Values.postgresql.postgresqlUsername .Values.postgresql.postgresqlPassword .Release.Name .Values.postgresql.postgresqlDatabase | b64enc | quote }}
+  database-url: {{ printf "pgsql://%s:%s@%s-postgresql/%s?serverVersion=13&charset=utf8" .Values.postgresql.global.postgresql.auth.username .Values.postgresql.global.postgresql.auth.password .Release.Name .Values.postgresql.global.postgresql.auth.database | b64enc | quote }}
   {{- else }}
   database-url: {{ .Values.postgresql.url | b64enc | quote }}
   {{- end }}
   php-app-secret: {{ .Values.php.appSecret | default (randAlphaNum 40) | b64enc | quote }}
-  php-jwt-passphrase: {{ .Values.php.jwt.passphrase | b64enc | quote }}
-  php-jwt-public-key: {{ .Values.php.jwt.publicKey | b64enc | quote }}
-  php-jwt-secret-key: {{ .Values.php.jwt.secretKey | b64enc | quote }}
   mercure-jwt-secret: {{ .Values.mercure.jwtSecret | default (randAlphaNum 40) | b64enc | quote }}
